# SandboxGE

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  README.md  REFACTORING_COMPLETE.md  build.bat  build.sh  run_with_console.bat
build_test/: CMakeCache.txt  SandboxGE.slnx  cmake_install.cmake
build_test/Release/shaders/: Composite.fs  Fullscreen.vs  Phong.fs  Phong.vs  SSAOBlur.fs  Shadow.vs  SilkPBR.fs
build_test/SandboxGE.dir/Release/SandboxGE.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_test/TestNewAPI.dir/Release/: TestNewAPI.exe.recipe
build_test/TestNewAPI.dir/Release/TestNewAPI.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_test/glfw/: GLFW.slnx  cmake_install.cmake  cmake_uninstall.cmake
build_test/glfw/src/: cmake_install.cmake  glfw3.pc
build_test/glfw/src/Release/: glfw3.lib
build_test/glfw/src/glfw.dir/Release/: glfw3.lib.recipe
build_test/glfw/src/glfw.dir/Release/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  glfw.lastbuildstate
build_test/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_test/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog
build_test/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
demo/: UnifiedDemo.rc  demo_scene.cpp  demo_unified.cpp  imgui_opengl3_patch.h  test_new_api.cpp  winmain.cpp
docs/: README.md
include/: Camera.h  Colour.h  EnvMapLoader.h  Floor.h  GeometryFactory.h  GraphicsEngine.h  IBL.h  LightingHelper.h  Material.h  SSAORenderer.h  SandboxGE.h  ShaderLib.h  ShaderPathResolver.h  ShadowRenderer.h  SphereObstacle.h  TransformStack.h  UBOStructures.h
include/core/: Camera.h  Colour.h  Light.h  RenderContext.h  RenderSettings.h  ResourceManager.h  Types.h
include/materials/: Material.h  ShaderHotReloader.h
include/renderables/: Floor.h  FloorRenderable.h  SphereObstacle.h  SphereRenderable.h
include/rendering/: GraphicsEngine.h  IRenderable.h  InstanceBatcher.h  InstancedRenderable.h  MeshRenderable.h  RenderQueue.h  Renderer.h  SSAORenderer.h  ShadowRenderer.h  UBOManager.h  UBOStructures.h  UnifiedRenderer.h
include/rhi/: Device.h  DeviceGL.h  Types.h
include/utils/: GeometryFactory.h  LightingHelper.h  ShaderLib.h  ShaderPathResolver.h  TransformStack.h
shaders/: Composite.fs  Fullscreen.vs  IBL_BRDF.fs  IBL_BRDF.vs  IBL_Cubemap.vs  IBL_Equirect.fs  IBL_Irradiance.fs  IBL_Prefilter.fs  Phong.fs  Phong.vs  PhongInstanced.vs  PhongUBO.fs  PhongUBO.vs  PhongUBO_BACKUP.fs  Refraction.fs  Refraction.vs  RefractionPBR.fs  SSAO.fs  SSAOBlur.fs  Shadow.fs  Shadow.vs  Silk.fs  Silk.vs  SilkPBR.fs  SilkPBR.vs  SilkPBR_UBO.fs  SilkPBR_UBO.vs  SilkUBO.fs  SilkUBO.vs
src/: Camera.cpp  Colour.cpp  EnvMapLoader.cpp  Floor.cpp  GeometryFactory.cpp  GraphicsEngine.cpp  IBL.cpp  Light.cpp  LightingHelper.cpp  Material.cpp  Renderer.cpp  SSAORenderer.cpp  ShaderLib_GLAD.cpp  ShaderPathResolver.cpp  ShadowRenderer.cpp  SphereObstacle.cpp  TransformStack.cpp
src/core/: ResourceManager.cpp
src/materials/: Material.cpp  ShaderHotReloader.cpp
src/renderables/: FloorRenderable.cpp  SphereRenderable.cpp
src/rendering/: InstanceBatcher.cpp  InstancedRenderable.cpp  MeshRenderable.cpp  RenderQueue.cpp  UBOManager.cpp  UnifiedRenderer.cpp
src/rhi/: DeviceGL.cpp
